--- a/video.html
+++ b/video.html
@@ -12,9 +12,9 @@
     <source src="http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-  <p>videojs</p>
+  <p>videojs1</p>
   <video id='my-video' class='video-js' controls autoplay preload='auto' width='640' height='264' data-setup='{}'>
-    <source src='http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4#t=,20' type='video/mp4'>
+    <source src='http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4' type='video/mp4'>
     <p class='vjs-no-js'>
       To view this video please enable JavaScript, and consider upgrading to a web browser that
       <a href='https://videojs.com/html5-video-support/' target='_blank'>supports HTML5 video</a>
