--- a/video.html
+++ b/video.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <p>videojs1</p>
-  <video id='my-video' class='video-js' controls autoplay preload='auto' width='640' height='264' data-setup='{}'>
+  <video id='my-video' class='video-js' controls autoplay preload='auto' data-setup='{}'>
     <source src='http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4' type='video/mp4'>
     <p class='vjs-no-js'>
       To view this video please enable JavaScript, and consider upgrading to a web browser that
