--- a/video.html
+++ b/video.html
@@ -8,8 +8,8 @@
   <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
 </head>
 <body>
-  <p>videojs1</p>
-  <video id='my-video' class='video-js' controls autoplay preload='auto' data-setup='{}'>
+  <p>videojs</p>
+  <video id='my-video' class='video-js' controls preload='auto' data-setup='{}'>
     <source src='http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4' type='video/mp4'>
     <p class='vjs-no-js'>
       To view this video please enable JavaScript, and consider upgrading to a web browser that
