--- a/video.html
+++ b/video.html
@@ -10,7 +10,7 @@
 <body>
   <p>videojs</p>
   <video id='my-video' class='video-js' controls muted autoplay preload='auto' data-setup='{}'>
-    <source src='http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4' type='video/mp4'>
+    <source src='http://embed.wistia.com/deliveries/072f89f15756b15340f52ffba6482e8e10c69a4b/file.mp4#t=,20' type='video/mp4'>
     <p class='vjs-no-js'>
       To view this video please enable JavaScript, and consider upgrading to a web browser that
       <a href='https://videojs.com/html5-video-support/' target='_blank'>supports HTML5 video</a>
@@ -19,7 +19,6 @@
   <script src='https://vjs.zencdn.net/7.6.5/video.js'></script> 
 </body>
 </html>
-
 
 
 
