--- a/test creator/index.html
+++ b/test creator/index.html
@@ -29,17 +29,15 @@
     </script>	
 	
     <script language="javascript" type="text/javascript">
+	RProfiler.addInfo('indicator', 'lcp', 123);
 	addEventListener('DOMContentLoaded', function() {
 		function print_LCP({name, id, delta}, indicator_token){
 		    var LCP_delta = `${delta}`;
 		    RProfiler.addInfo('indicator', indicator_token, LCP_delta);
-		    console.log("1:"+LCP_delta);
+		    console.log("2:"+LCP_delta);
 		}
 		webVitals.getLCP(print_LCP, 'lcp');
       	});
-
-
-
 
     </script>
 	
