--- a/test creator/index.html
+++ b/test creator/index.html
@@ -29,16 +29,14 @@
     </script>	
 	
     <script language="javascript" type="text/javascript">
-	//RProfiler.addInfo('indicator', 'lcp', 123);
-	addEventListener('DOMContentLoaded', function() {
-		function print_LCP({name, id, delta}){
-		    var LCP_delta = `${delta}`;
-		    RProfiler.addInfo('indicator', 'lcp', LCP_delta);
-		    console.log("3:"+LCP_delta);
-		}
-		webVitals.getLCP(print_LCP, 'lcp');
-      	});
+	
+	function printD({name, id, delta}){
+	    var LCP_delta = `${delta}`;
+	    console.log("1: "+LCP_delta);
+	}
 
+	RProfiler.addInfo('indicator', 'lcp', webVitals.getLCP(printD););    
+	
     </script>
 	
 </head>
