--- a/test creator/index.html
+++ b/test creator/index.html
@@ -35,7 +35,7 @@
 	    console.log("1: "+LCP_delta);
 	}
 
-	RProfiler.addInfo('indicator', 'lcp', webVitals.getLCP(printD););    
+	RProfiler.addInfo('indicator', 'lcp', webVitals.getLCP(printD));    
 	
     </script>
 	
