--- a/test creator/index.html
+++ b/test creator/index.html
@@ -27,7 +27,7 @@
 	
 	
     <script language="javascript" type="text/javascript">
-	addEventListener('onload', function() {
+	addEventListener('load', function() {
 		function print_LCP({name, id, delta}){
 		    var LCP_delta = `${delta}`;
 		    RProfiler.addInfo('indicator', 'lcp', LCP_delta);
