--- a/test creator/index.html
+++ b/test creator/index.html
@@ -31,9 +31,9 @@
 		function print_LCP({name, id, delta}){
 		    var LCP_delta = `${delta}`;
 		    RProfiler.addInfo('indicator', 'lcp', LCP_delta);
-		    console.log("2:"+LCP_delta);
+		    console.log("3:"+LCP_delta);
 		}
-		webVitals.getLCP(print_LCP, 'lcp');
+		webVitals.getLCP(print_LCP);
       	});
     </script>
 	
