--- a/test creator/index.html
+++ b/test creator/index.html
@@ -15,15 +15,13 @@
     <script type="text/javascript" src="loading-bar/loading-bar.js"></script>
 
    <script defer src="https://unpkg.com/web-vitals@0.2.2/dist/web-vitals.es5.umd.min.js"></script>
-<!--	
+
    <script>
-	addEventListener('DOMContentLoaded', function() {
-	  webVitals.getCLS(console.log);
-	  webVitals.getFID(console.log);
-	  webVitals.getLCP(console.log);
+	window.addEventListener('load', (event) => {
+    		console.log('The page has fully loaded');
 	});
    </script>
--->
+
 	
 	
 
