--- a/test creator/index.html
+++ b/test creator/index.html
@@ -17,7 +17,7 @@
    <script defer src="https://unpkg.com/web-vitals@0.2.2/dist/web-vitals.es5.umd.min.js"></script>
 
    <script>
-	window.addEventListener('load', (event) => {
+	window.addEventListener('DOMContentLoaded', (event) => {
     		console.log('The page has fully loaded');
 	});
    </script>
