--- a/test creator/index.html
+++ b/test creator/index.html
@@ -18,7 +18,7 @@
 
    <script>
 	window.addEventListener('DOMContentLoaded', (event) => {
-    		console.log('The page has fully loaded');
+    		console.log('The page has fully DOMContentLoaded');
 	});
    </script>
 
