--- a/test creator/index.html
+++ b/test creator/index.html
@@ -18,7 +18,13 @@
 
    <script>
 	window.addEventListener('DOMContentLoaded', (event) => {
-    		console.log('The page has fully DOMContentLoaded');
+    		console.log('The page has fully 1');
+		function print_LCP({name, id, delta}){
+		    var LCP_delta = `${delta}`;
+		    RProfiler.addInfo('indicator', 'lcp', LCP_delta);
+		    console.log("0:"+LCP_delta);
+		}
+		webVitals.getLCP(print_LCP)
 	});
    </script>
 
