--- a/test creator/index.html
+++ b/test creator/index.html
@@ -53,6 +53,7 @@
 	-->
 </head>
 <body>
+	<a href="/"></a>
     <header class="header">
         <div class="header-inner clearfix">
             <div class="logo">
