--- a/test creator/index.html
+++ b/test creator/index.html
@@ -53,7 +53,7 @@
 	-->
 </head>
 <body>
-	<a href="/"></a>
+	<a href="page.html">click to next page</a>
     <header class="header">
         <div class="header-inner clearfix">
             <div class="logo">
