--- a/test creator/index.html
+++ b/test creator/index.html
@@ -26,7 +26,7 @@
     <script>
 	window.addEventListener('DOMContentLoaded', (event) => {
     		console.log('The page has fully 4');
-		RProfiler.addInfo('indicator', 'lcp', 123);
+		RProfiler.addInfo('indicator', 'lcp', webVitals.getLCP(print_LCP));
 		
 		function print_LCP({name, id, delta}){
 		    var LCP_delta = `${delta}`;
