--- a/test creator/index.html
+++ b/test creator/index.html
@@ -29,13 +29,12 @@
 
     <script>
 	window.addEventListener('DOMContentLoaded', (event) => {
-    		console.log('The page has fully 1');
+    		console.log('The page has fully 2');
 		RProfiler.addInfo('indicator', 'lcp', 123);
 		
 		function print_LCP({name, id, delta}){
-		    var LCP_delta = `${delta}`;
-		    RProfiler.addInfo('indicator', 'lcp', LCP_delta);
-		    console.log("0:"+LCP_delta);
+		    RProfiler.addInfo('indicator', 'lcp', `${delta}`);
+		    console.log(`${delta}`);
 		}
 		webVitals.getLCP(print_LCP)
 		
