--- a/test creator/index.html
+++ b/test creator/index.html
@@ -29,11 +29,11 @@
 
     <script>
 	window.addEventListener('DOMContentLoaded', (event) => {
-    	console.log('The page has fully 1');
-		RProfiler.addInfo('indicator', 'lcp', 123);
+    		console.log('The page has fully 2');
+		//RProfiler.addInfo('indicator', 'lcp', 123);
 		
 		function print_LCP({name, id, delta}){
-			var LCP_delta = `${delta}`;
+		var LCP_delta = `${delta}`;
 		    RProfiler.addInfo('indicator', 'lcp', parseInt(LCP_delta));
 		    console.log(parseInt(LCP_delta));
 		}
