--- a/test creator/index.html
+++ b/test creator/index.html
@@ -29,7 +29,7 @@
 
     <script>
 	window.addEventListener('DOMContentLoaded', (event) => {
-    		console.log('The page has fully 3');
+    		console.log('The page has fully 4');
 		//RProfiler.addInfo('indicator', 'lcp', 123);
 		
 		function print_LCP({delta}){
@@ -37,7 +37,8 @@
 		    RProfiler.addInfo('indicator', 'lcp', parseInt(LCP_delta));
 		    console.log(parseInt(LCP_delta));
 		}
-		webVitals.getLCP(print_LCP)
+		webVitals.getLCP(print_LCP);
+		webVitals.getLCP(console.log);
 		
 	});
    </script>
