--- a/test creator/page.html
+++ b/test creator/page.html
@@ -23,17 +23,17 @@
     </script>
 	
 
-    <script>
+<script>
 	window.addEventListener('DOMContentLoaded', (event) => {
-    		console.log('The page has fully 4');
-		RProfiler.addInfo('indicator', 'lcp', 123);
-		
-		function print_LCP({name, id, delta}){
-		    var LCP_delta = `${delta}`;
-		    RProfiler.addInfo('indicator', 'lcp', LCP_delta);
-		    console.log("1:"+LCP_delta);
+    		console.log('The page 2 - 1');
+
+		function print_LCP({delta}){
+		var LCP_delta = `${delta}`;
+		    RProfiler.addInfo('indicator', 'lcp', parseInt(LCP_delta));
+		    console.log(parseInt(LCP_delta));
 		}
-		webVitals.getLCP(print_LCP)
+		webVitals.getLCP(print_LCP);
+		webVitals.getLCP(console.log);
 		
 	});
    </script>
