--- a/test/index.html
+++ b/test/index.html
@@ -49,7 +49,7 @@
 
 		function print_FID({delta}){
 		    var FID_delta = `${delta}`;
-		    RProfiler.addInfo('indicator', 'fid', parseInt(FID_delta));
+		    RProfiler.addInfo('indicator', 'fid', parseInt(FID_delta*1000));
 		    console.log(parseInt(FID_delta));
 		}
 		webVitals.getFID(print_FID);
