--- a/test creator/index.html
+++ b/test creator/index.html
@@ -41,7 +41,7 @@
 
 		function print_CLS({delta}){
 		    var CLS_delta = `${delta}`;
-		    RProfiler.addInfo('indicator', 'cls', parseInt(CLS_delta));
+		    RProfiler.addInfo('indicator', 'cls', parseInt(CLS_delta*1000));
 		    console.log(parseInt(CLS_delta));
 		}
 		webVitals.getCLS(print_CLS);
