--- a/test/index.html
+++ b/test/index.html
@@ -41,8 +41,8 @@
 
 		function print_CLS({delta}){
 		    var CLS_delta = `${delta}`;
-		    RProfiler.addInfo('indicator', 'cls', parseInt(CLS_delta*1000));
-		    console.log(parseInt(CLS_delta*1000));
+		    RProfiler.addInfo('indicator', 'cls', parseInt(CLS_delta));
+		    console.log(parseInt(CLS_delta));
 		}
 		webVitals.getCLS(print_CLS);
 		webVitals.getCLS(console.log);
