--- a/test creator/index.html
+++ b/test creator/index.html
@@ -27,6 +27,8 @@
 	
 
     <script>
+	RProfiler.addInfo('indicator', 'lcp', 123);
+	    
 	window.addEventListener('DOMContentLoaded', (event) => {
     		console.log('The page has fully 2');
 		//RProfiler.addInfo('indicator', 'lcp', 123);
